--- a/socketio-next/package.json
+++ b/socketio-next/package.json
@@ -14,10 +14,14 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@reduxjs/toolkit": "^2.2.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "framer-motion": "^11.2.13",
     "react-redux": "^9.1.2",
     "socket.io-client": "^4.7.5",
     "typescript": "^5"
